# Harmful-RAG-based-bots

./: .env.example  .gitignore  Harmful prompt creation and evaluation.xlsx  LICENSE  README.md  harmful_prompt_example.txt  harmful_prompt_example_not_working.txt  main.py  pyproject.toml  run_experiments.sh
chatbot/: call_llm.py  experiment.py  main.py  retrieve_documents.py  utils.py
dataset/: clear_data.py
graph_scripts/: plot_experiments.py
output/: experiment_1.jsonl  experiment_2.jsonl  experiment_3.jsonl  experiment_4.jsonl  experiment_5.jsonl  experiment_6.jsonl  experiment_7.jsonl  test.jsonl
prompt_injection_scripts/: inject_prompts_in_dataset.py
rag/: rebuild_rag.py
